--- a/galerija.html
+++ b/galerija.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerija</title>
-    <link rel="stylesheet" href="css/styleGalerija.css">
+    <link rel="stylesheet" href="styleGalerija.css">
 </head>
 <body>
     <header>
@@ -23,16 +23,16 @@
     <main>
         <h1>Galerija</h1>
         <div class="gallery">
-            <div class="gallery-item"><img src="slike/UNA10591.JPG" alt="Wedding 1"></div>
-            <div class="gallery-item"><img src="slike/UNA10647.JPG" alt="Wedding 2"></div>
-            <div class="gallery-item"><img src="slike/UNA10665.JPG" alt="Wedding 3"></div>
-            <div class="gallery-item"><img src="slike/UNA11696.jpg" alt="Wedding 4"></div>
-            <div class="gallery-item"><img src="slike/UNA19800.jpg" alt="Wedding 5"></div>
-            <div class="gallery-item"><img src="slike/UNA19806.jpg" alt="Wedding 6"></div>
-            <div class="gallery-item"><img src="slike/_NAL2698.jpg" alt="Wedding 7"></div>
-            <div class="gallery-item"><img src="slike/_NAL2624.jpg" alt="Wedding 8"></div>
-            <div class="gallery-item"><img src="slike/_NAL2814.jpg" alt="Wedding 9"></div>
-            <div class="gallery-item"><img src="slike/UNA11764.jpg" alt="Wedding 10"></div>
+            <div class="gallery-item"><img src="UNA10591.JPG" alt="Wedding 1"></div>
+            <div class="gallery-item"><img src="UNA10647.JPG" alt="Wedding 2"></div>
+            <div class="gallery-item"><img src="UNA10665.JPG" alt="Wedding 3"></div>
+            <div class="gallery-item"><img src="UNA11696.jpg" alt="Wedding 4"></div>
+            <div class="gallery-item"><img src="UNA19800.jpg" alt="Wedding 5"></div>
+            <div class="gallery-item"><img src="UNA19806.jpg" alt="Wedding 6"></div>
+            <div class="gallery-item"><img src="_NAL2698.jpg" alt="Wedding 7"></div>
+            <div class="gallery-item"><img src="_NAL2624.jpg" alt="Wedding 8"></div>
+            <div class="gallery-item"><img src="_NAL2814.jpg" alt="Wedding 9"></div>
+            <div class="gallery-item"><img src="UNA11764.jpg" alt="Wedding 10"></div>
         </div>
     </main>
 
