--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt</title>
-    <link rel="stylesheet" href="css/styleKontakt.css">
+    <link rel="stylesheet" href="styleKontakt.css">
 </head>
 <body>
     <header>
